Put variables in base.scss and imported them into other sass files

--- a/src/styles/Auth.scss
+++ b/src/styles/Auth.scss
@@ -8,9 +8,7 @@
   align-items: center;
 }
 
-$first-color: #ff9c39;
-$second-color: #ff70a6;
-$third-color: #ffd670;
+@import './base.scss';
 
 .auth-page {
   @extend %flexbox-center;
