--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -3,3 +3,11 @@
 }
 
 @import './base.scss';
+
+.profile {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+}
