--- a/src/styles/Auth.scss
+++ b/src/styles/Auth.scss
@@ -2,16 +2,10 @@
   box-sizing: border-box;
 }
 
-%flexbox-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 @import './base.scss';
 
 .auth-page {
-  @extend %flexbox-center;
+  @include flex(center, center, column);
   height: 100vh;
   background-image: linear-gradient(to bottom right, $first-color, $second-color);
 
@@ -53,10 +47,25 @@
 }
 
 .auth-box {
-  @extend %flexbox-center;
-  flex-direction: column;
+  @include flex(center, center, column);
   height: 500px;
   width: 400px;
   border: 2px solid black;
   border-radius: 15px;
+}
+
+@media (max-width: 420px) {
+  .auth-box {
+    width: 300px;
+  }
+
+  .auth-page {
+    button {
+      width: 175px;
+    }
+
+    input {
+      width: 250px;
+    }
+  }
 }
