--- a/src/styles/dash.scss
+++ b/src/styles/dash.scss
@@ -6,22 +6,17 @@
 
 .dashboard {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex(flex-start, center, column);
   padding: 50px;
 }
 
 .new-post-box {
-  border: 2px solid black;
-  border-radius: 15px;
+  @extend %basic-border;
   width: 500px;
 
   header {
     background-image: $gradient;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include flex(space-between, center, row);
     border-top-left-radius: 13px;
     border-top-right-radius: 13px;
     height: 40px;
@@ -34,9 +29,7 @@
   }
 
   .input-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex (center, center, row);
     border: none;
     width: 100%;
     height: 50px;
