--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -6,8 +6,6 @@
 
 .profile {
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex(flex-start, center, column);
   padding: 50px;
 }
