--- a/src/styles/dash.scss
+++ b/src/styles/dash.scss
@@ -61,3 +61,15 @@ button {
 button:hover {
   color: white;
 }
+
+@media (max-width: 519px) {
+  .new-post-box {
+    width: 350px;
+  }
+
+  .input-box {
+    input {
+      width: 225px;
+    }
+  }
+}
